fix the data from overflowing the div container in play options modal

--- a/client/src/sass/components/_play-modal.scss
+++ b/client/src/sass/components/_play-modal.scss
@@ -4,8 +4,9 @@
   left: 50%;
   bottom: 4rem;
   background-color: $color-primary-dark;
+  overflow-y: scroll;
+  padding-bottom: $md-spacing;
   transform: translate(-50%, -50%);
-  height: 35%;
   width: 35%;
 
   display: flex;
